Adicionando os detalhes dos pokemons

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
 
-<body>
+<body>    
     <section class="content">
-        <h1>Pokedex</h1>
-
+        <h1>Pokedex</h1>   
+        <div id="description">            
+        </div> 
+                 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
-
+          
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
-            </button>
+            </button>            
         </div>
     </section>
 
